--- a/package.json
+++ b/package.json
@@ -12,6 +12,11 @@
   "license": "ISC",
   "devDependencies": {
     "@parcel/transformer-sass": "^2.8.0",
-    "parcel": "^2.8.0"
+    "parcel": "^2.8.0",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4"
+  },
+  "dependencies": {
+    "lit-html": "^2.5.0"
   }
 }
