--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@parcel/transformer-sass": "^2.8.0",
     "parcel": "^2.8.0",
     "postcss": "^8.4.20",
+    "process": "^0.11.10",
     "tailwindcss": "^3.2.4"
   },
   "dependencies": {
