--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "typescript",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "source": "src/index.html",
   "scripts": {
-    "dev": "parcel src/index.html",
+    "dev": "parcel",
     "build": "parcel build dist"
   },
   "keywords": [],
