--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "source": "src/index.html",
   "scripts": {
-    "dev": "parcel",
+    "dev": "parcel src/index.html",
     "build": "parcel build --public-url ./"
   },
   "keywords": [],
@@ -15,7 +15,9 @@
     "parcel": "^2.8.0",
     "postcss": "^8.4.20",
     "process": "^0.11.10",
-    "tailwindcss": "^3.2.4"
+    "sass": "^1.57.1",
+    "tailwindcss": "^3.2.4",
+    "typescript": "^4.9.4"
   },
   "dependencies": {
     "lit-html": "^2.5.0"
