--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "typescript": "^4.9.4"
   },
   "dependencies": {
+    "@types/howler": "^2.2.7",
+    "howler": "^2.2.3",
     "lit-html": "^2.5.0"
   }
 }
